# mdfix

./: LICENSE  README.md  pyproject.toml
md_semlinebreak/: __init__.py  cli.py  config.py  formatter.py
tests/: __init__.py  test_cli.py  test_formatter.py
